# wdm

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.aa  README.config  README.newGnuLinuxlogo  README.pam  README.pixmaps  README.voins  TODO  acconfig.h  autogen.sh  config  config.h.in  configure  configure.ac  configure.in  mkinstalldirs  wdm.spec  wdm.spec.in
configs/: Xresources  Xsession.in  Xsetup_0.in  wdm-config.in  wdmReconfig.in
doc/: Makefile.am  Makefile.in  wdm.man.in  wdmLogin.man
etc/: Howto.conf.in  Howto.cook  Makefile.configs  Makefile.head  Makefile.sh  archive.cook  build.cook  changelog.rpt  configure.cook  functions.cook  i18n.cook  makefile.cook  project_timestamp.rpt  runtest.sh  runtest_c.sh  runtest_cc.sh  runtest_hh.cc  runtest_hh.sh  runtest_sh.sh  sourcelist.cook
etc/config.d/: architecture  cook  diff  rcs
include/: dm.h  dm_auth.h  greet.h  runtest.h  wdm.h  wdmLogin.h  wdmPrefs.h  wdmconfig.h  wdmlib.h
patches/: xdm-3.3.2-dm_h.patch  xdm-3.3.2-irix1.patch  xdm-3.3.2-irix2.patch  xdm-3.3.2-pamwdm.patch  xdm-3.3.2-resource2.patch  xdm-3.3.2-session.patch
pixmaps/: Eagle.xpm  Earth200x130.xpm  gnuLogo.xpm
po/: cs.po  de.po  en.po  es.po  fr_FR.po  ja.po  ru.po
src/: Greet.c  Login.c  Makefile.am  Makefile.in  TestLogin.c  access.c  chooser.c  daemon.c  dm.h  resource.c  session.c  util.c  verify.c  wdmconfig.h  xdmcp.c
src/TestLogin/: TestLogin.c
src/config/: Makefile.am  Makefile.in  Xclients  Xclients.in  Xservers  Xservers.in  Xsession  Xsession.XFree86  Xsession.in  Xsetup_0  Xsetup_0.in  wdm-config  wdm-config.in  wdmReconfig  wdmReconfig.in
src/libwdm/: debug.c  environment.c  names.c  plcheckers.c
src/pixmaps/: Makefile.am  Makefile.in  NASA_image_guideline.html
src/wdm/: Greet.c  access.c  auth.c  choose.c  daemon.c  dm.c  dpylist.c  error.c  file.c  genauth.c  loghelpers.c  mitauth.c  netaddr.c  policy.c  protodpy.c  reset.c  resource.c  server.c  session.c  socket.c  streams.c  util.c  verify.c  xdmcp.c
src/wdmChooser/: chooser.c
src/wdmLogin/: Login.c  config.c
src/wdmPrefs/: prefs.c  testPanel.c  testPanel2.c
test/: debug_test.c  dummy.c  env_test.c  plcheckers_test.c
xdm/: dpylist.c  sessreg.c
xdm/config/: Xserv.ws.cpp
xdm/config/CVS/: Entries  Repository  Tag
xdm/greeter/: verify.c
xdm/greeter/CVS/: Entries  Repository  Root
